# embroidery-tools

./: .pre-commit-config.yaml  pyproject.toml
embroidery_tools/: flatten.py
