[tool.poetry]
name = "embroidery-tools"
version = "0.1.0"
description = ""
authors = ["Alec McGavin"]
readme = "README.md"
packages = [{include = "embroidery_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
svgpathtools = "^1.6.1"
pyclipper = "^1.3.0.post5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
